<?xml version="1.0"?>
<package format="2">
  <name>lslidar_driver</name>
  <version>4.2.3</version>

  <maintainer email="tongsky723@sina.com">tongsky</maintainer>
  <author>Yutong</author>
  <license>BSD</license>
  <description> ROS device driver for C32 lidar </description>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>angles</depend>
  <depend>pcl_conversions</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>rslidar_input</depend>
  <depend>libpcl-all-dev</depend>
  <depend>lslidar_msgs</depend>
  <depend>libpcap</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
